--- a/harbour-oontoissa.desktop
+++ b/harbour-oontoissa.desktop
@@ -12,7 +12,7 @@ Name=At work
 Name[de]=Bei der Arbeit
 Name[en]=At work
 Name[fi]=Oon töissä!
-Name[fr]=At work
-Name[sv]=At work
-Name[zh_CN]=At work
+Name[fr]=Au travail
+Name[sv]=På jobbet
+Name[zh_CN]=上班中
 
