--- a/harbour-oontoissa.desktop
+++ b/harbour-oontoissa.desktop
@@ -13,6 +13,7 @@ Name[de]=Bei der Arbeit
 Name[en]=At work
 Name[fi]=Oon töissä!
 Name[fr]=Au travail
+Name[it]=A lavoro
 Name[ru]=At work
 Name[sv]=På jobbet
 Name[zh_CN]=上班中
