--- a/harbour-oontoissa.desktop
+++ b/harbour-oontoissa.desktop
@@ -13,6 +13,8 @@ Name[de]=Bei der Arbeit
 Name[en]=At work
 Name[fi]=Oon töissä!
 Name[fr]=Au travail
+Name[nl]=Aan het werk
+Name[nl_BE]=Aan het werk
 Name[it]=A lavoro
 Name[ru]=At work
 Name[sv]=På jobbet
